Project

General

Profile

Actions

Bug #39951

closed

mount: key parsing fail when doing a remount

Added by Luis Henriques almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
kceph, tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When doing a CephFS remount (-o remount) the secret is parsed from procfs and we get '<hidden>' as a result and the mount will fail with:

secret is not valid base64: Invalid argument.
adding ceph secret key to kernel failed: Invalid argument.

As the kernel already have the key, we simply need to use it, as in the attach patch.


Files


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #40163: luminous: mount: key parsing fail when doing a remountResolvedNathan CutlerActions
Copied to CephFS - Backport #40164: nautilus: mount: key parsing fail when doing a remountResolvedPatrick DonnellyActions
Copied to CephFS - Backport #40165: mimic: mount: key parsing fail when doing a remountResolvedNathan CutlerActions
Actions #1

Updated by Luis Henriques almost 5 years ago

Actions #2

Updated by Patrick Donnelly almost 5 years ago

  • Project changed from Linux kernel client to CephFS
  • Status changed from New to Fix Under Review
  • Assignee set to Luis Henriques
  • Target version set to v15.0.0
  • Start date deleted (05/16/2019)
  • Source set to Development
  • Backport set to nautilus,mimic,luminous
  • Pull request ID set to 28148
  • Component(FS) kceph, tools added
Actions #3

Updated by Patrick Donnelly almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40163: luminous: mount: key parsing fail when doing a remount added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40164: nautilus: mount: key parsing fail when doing a remount added
Actions #6

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40165: mimic: mount: key parsing fail when doing a remount added
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF