common/secret.c: fix key parsing when doing a remount

When doing a CephFS remount (-o remount) the secret is parsed from procfs
and we get '<hidden>' as a result and the mount will fail with:

  secret is not valid base64: Invalid argument.
  adding ceph secret key to kernel failed: Invalid argument.

As the kernel already have the key, we simply need to use it.

Fixes: https://tracker.ceph.com/issues/39951
Signed-off-by: Luis Henriques <lhenriques@suse.com>